# acceleration-control

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
GCode/: orcaslicer.gcode
config/: example.conf
src/: gcode.rs  main.rs  preprocess.rs  types.rs
src/slicers/: mod.rs  orca.rs  orcaslicer.rs  prusaslicer.rs  slic3r.rs  superslicer.rs
