[package]
name = "acceleration-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
counter = "0.5.7"
enum_dispatch = "0.3.12"
generator = "0.7.5"
once_cell = "1.18.0"
regex = "1.9.1"
strum = { version = "0.25.0", features = ["derive"] }
tempfile = "3.6.0"
thiserror = "1.0.43"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
